up 1.2